--- a/style.css
+++ b/style.css
@@ -462,6 +462,10 @@ a:hover{
 .stay-item-map{
     flex: 2;
 }
+.location-detail {
+    margin-bottom: 30px;
+}
+
 .links{
     cursor: pointer;
     text-decoration: underline;
@@ -686,4 +690,31 @@ footer h2{
         width: 10px;
         height: 10px;
     }
+}
+
+
+@keyframes    firework-animation {
+    0% {background-color : #ff8426;}
+    25% {background-color : #fffc84;}
+    50% {background-color : #ff83f4;}
+    75% {background-color : #83b6ff;}
+    100% {background-color : #ff8426;}
+}
+@-webkit-keyframes firework-animation {
+    0% {background-color : #ff8426;}
+    25% {background-color : #fffc84;}
+    50% {background-color : #ff83f4;}
+    75% {background-color : #83b6ff;}
+    100% {background-color : #ff8426;}
+}
+.fireWorkParticle {
+    z-index : 999;
+    position: absolute;
+    height : 5px;
+    width : 5px;
+    border-radius : 5px;
+    animation-name : firework-animation;
+    animation-timing-function : linear;
+    animation-duration : 1s;
+    animation-iteration-count : infinite;
 }
